[workspace]
resolver = "2"
members = ["common", "worker", "service", "dns-server", "resolver", "executor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = { version = "0.4", features = ["serde"] }
serde_with = "3.11"
hickory-server = "0.25"
hickory-proto = "0.25"
hickory-resolver = "0.25"
clap = { version = "4.5", features = ["derive"] }
maxminddb = "0.24"
anyhow = "1"
toml = "0.8"
tendermint = "0.40"
tendermint-rpc = { version = "0.40", features = ["http-client"] }
prost = "0.13"
ibc-proto = "0.49"
ics23 = "0.12"
