[package]
name = "jam-netadapter-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
