[package]
name = "jam-netadapter-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netadapter-dns"
path = "src/main.rs"

[dependencies]
jam-netadapter-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hickory-server = { workspace = true }
hickory-proto = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
maxminddb = { workspace = true }
