[package]
name = "jam-ibc-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "off-chain executor for jam ibc relay"

[[bin]]
name = "jam-ibc-executor"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { workspace = true }

# cosmos/tendermint
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }

# crypto
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }

# http client
reqwest = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# cli
clap = { workspace = true }

# error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
