[package]
name = "jam-netadapter-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netadapter-resolver"
path = "src/main.rs"

[dependencies]
jam-netadapter-common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hickory-resolver.workspace = true
hickory-proto.workspace = true
